--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-firebase/app": "^18.2.0",
+    "@shopify/react-native-skia": "^0.1.172",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
+    "expo-dev-client": "~2.2.1",
     "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^10.0.0",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-native": "0.71.8",
+    "react-native-device-info": "^10.8.0",
     "react-native-permissions": "^3.8.4",
-    "react-native-web": "^0.18.12"
+    "react-native-reanimated": "~2.14.4",
+    "react-native-web": "^0.18.12",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
